# ChangeLog for media-video/screenkast
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Apr 2008; Charles Clément <caratorn@gmail.com>
  -files/0.1.1-include_headers.patch:
  Remove unneeded patch

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de screenkast-0.1.3.ebuild:
  Shorten description

  20 Oct 2006; Christian Faulhammer (opfer) <gentoo@faulhammer.org>
  screenkast-0.1.2.ebuild:
  added trailing slash to HOMEPAGE URL

  16 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch> ChangeLog:
  New ebuild for bug 139821
