@@ -1,4 +1,4 @@
-DIST screenkast-0.1.3.tar.gz 933171 RMD160 37f7b10de9945902fd933bdb8b67b9c6bd33157f SHA1 d2a7f9e59273984c01fc7610a40c1f96d029d022 SHA256 6711134ca1a76ef04147e6f92edcdded3925f0298347f28dbbe47eb44348a035
-EBUILD screenkast-0.1.3.ebuild 455 RMD160 8e84f53e231f49522fdec5bb7482a3087a6d8088 SHA1 fe0889e35beae9a0b0ac200bed2e9387acd901df SHA256 1e9e239869eaa9611dc3c7af5389bad1459f2d4b5d6d1dc92c47ebab08a44910
-MISC ChangeLog 556 RMD160 5b049a45d5dba6ec419f5c5ee8e9897782e62616 SHA1 d743e6a2c7792005bbeaeef2e35f3d899dd4511e SHA256 db2c3bfe0c45487dc17b7a4160b300e4455becf96b456468e54211fc42661365
+DIST screenkast-0.1.4.tar.gz 964641 RMD160 48ef67835b94d45a5c286df7a43ee7d6bb589373 SHA1 347c0a209ee9cb143078ea57dd29df84656b2eff SHA256 714c91f49b67a250152afb2f4bb4630366dd2732b455fb399eabb49e5888c887
+EBUILD screenkast-0.1.4.ebuild 650 RMD160 8f407be7b023a25d3ae8c111ccb22c990dbccd5c SHA1 c89d43a74a0be262addd76191f238917628ce3ba SHA256 811fec5b66cc7c2e8cf5bc264966debddca9a3a6a46cedd0d277814af6505589
+MISC ChangeLog 719 RMD160 19dc92060ad9d225be35ba85470813ba7ab5e6ac SHA1 44d809052bc012c345ab194e9a8e019fba1e7eca SHA256 8f58c0bd6b3c8e55bbfb3ca36e58ff3b8b835de88b6fbef43a9a56471c19af17
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
